[package]
authors = ["bunnie <bunnie@kosagi.com>"]
description = "Localization string database (as static macro) for Xous"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "locales"
version = "0.1.0"

# Dependency policy: nail down all dependencies to the minor version number, so that changes to the code base are deliberate acts.
[dependencies]

[build-dependencies]
glob = "0.3.0"
quote = "1.0.2"
serde_json = "1.0.41"
proc-macro2 = "1.0"
regex = "1.3.1"
lazy_static = "1.4.0"