[package]
authors = ["bunnie <bunnie@kosagi.com>"]
description = "Localization string database (as static macro) for Xous"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "locales"
version = "0.1.0"

# Dependency versions enforced by Cargo.lock.
[dependencies]

[build-dependencies]
glob = "0.3.0"
quote = "1.0.2"
serde_json = "1.0.41"
proc-macro2 = "1.0"
regex = "1.3.1"
lazy_static = "1.4.0"

[features]
# alternative language targets. Only one may be specified at a time
lang-ja = []
lang-zh = []
lang-en-tts = []
lang-fr = []
