[package]
authors = [
    "Sean Cross <sean@xobs.io>"
]
categories = ["embedded", "no-std"]
description = "Attributes re-exported in `xous`"
documentation = "https://docs.rs/xous"
keywords = ["xous", "runtime", "startup"]
license = "MIT OR Apache-2.0"
name = "xous-macros"
repository = "https://github.com/betrusted/xous-core"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

# Dependency policy: nail down all dependencies to the minor version number, so that changes to the code base are deliberate acts.
[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"
features = ["extra-traits", "full"]

[dependencies.rand]
version = "0.7.3"
default-features = false
features = ["small_rng"]
