[package]
name = "svd2repl"
description = "Convert an SVD file into a Renode Platform description"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependency versions enforced by Cargo.lock.
[dependencies]
quick-xml = "0.28.1"
