[package]
name = "tests"
version = "0.1.1"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"
description = "Core kernel for Xous, including task switching and memory management"

[lib]
name = "kernel"
path = "../kernel/src/main.rs"
test = true

[features]
testing = []
default = ["testing"]

[dependencies]
bitflags = "1.2.1"
sha3 = { default-features = false, version = "0.8.2" }
xous = { path = "../xous-rs", features = ["forget-memory-messages", "processes-as-threads"] }

[target.'cfg(any(windows, unix))'.dependencies]
rand = "0.7"
hex = "0.4"
lazy_static = "1.4"
