[package]
authors = ["Sean Cross <sean@xobs.io>"]
default-run = "create-image"
edition = "2018"
name = "tools"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependency versions enforced by Cargo.lock.
[dependencies]
bitflags = "1.2.1"
clap = "2.33.3"
crc = "1.8.1"
csv = "1.1.5"
ring = "0.16.20"
env_logger = "0.7.1"
log = "0.4.14"
pem = "0.8.3"
svd2utra = "0.1.13"
xmas-elf = "0.9.0"
xous-semver = "0.1.2"

[[bin]]
name = "copy-object"

[[bin]]
name = "create-image"

[[bin]]
name = "make-renode-boot"

[[bin]]
name = "make-tags"

[[bin]]
name = "read-tags"

[[bin]]
name = "sign-image"
