[package]
name = "utralib"
version = "0.1.27"
authors = ["Sean Cross <sean@xobs.io>", "bunnie <bunnie@kosagi.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Xous UTRA (Unambiguous Thin Register Abstration) library generator"
repository = "https://github.com/betrusted-io/xous-core/"
homepage = "https://betrusted.io/xous-book/"

# Dependency versions enforced by Cargo.lock.
[dependencies]

[build-dependencies]
svd2utra = "0.1.25"

# UTRA pre-generated version tracker
[features]
std = []

# This specifies the SVD rev for platform targets
# Precursor is an FPGA, so the actual hardware register spec can change over time,
# hence the gitrev is specified as part of the precursor feature spec. We specify
# every gitrev that we may need to refer back to, so that we're not trying to
# map utralib version numbers to precursor soc revs -- by having the gitrev exposed,
# we can directly look up what generated the SVD file we're using without having
# to go through some manually maintained lookup table of version # to gitrev.
#
# SoCs in custom silicon would typically not need the gitrev, since their
# hardware is immutable.
#
# Maintainer note: add checks in build.rs to ensure only one is selected.
precursor-perflib = []
precursor-dvt = []
precursor-pvt = []     # based on 2020.08 litex, v0.9.11 tag

# The SVD gitrev as specified above is only invoked to track fine-grained
# changes between target revisions. Below is the overall target switch,
# which is the preferred mechanism for isolating target-specific code.
#
# These features are mutually exclusive. Maintainers should update the
# checks inside build.rs to ensure consistency.
precursor = []
hosted = []
renode = []

# ATSAMA5D27 ARMv7A SoC
atsama5d27 = []

# Baochip-1x SoC & FPGA model
bao1x = []
# Emulation for bao1x
hosted-baosec = []

# Arty targets
artybio = []
artyvexii = []

# Specify a Precusor default so that we can pass packaging CI tests.
default = ["hosted"]
