[package]
authors = ["Sean Cross <sean@xobs.io>"]
description = "System call interface for Xous"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "xous-ipc"
version = "0.8.0"

# Dependency policy: nail down all dependencies to the minor version number, so that changes to the code base are deliberate acts.
[dependencies]
bitflags = {version = "1"}
rkyv = {version = "0.4.3", features = ["const_generics"], default-features = false}
xous = "0.8.0"
