[package]
name = "xous"
version = "0.9.7"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "System call interface for Xous"
repository = "https://github.com/betrusted-io/xous-core/"
homepage = "https://betrusted.io/"

# Dependency policy: fully specify dependencies to the minor version number
[dependencies]
bitflags = {version = "1.2.1", optional = true }
xous-macros = { path = "../macros", version = "0.1.0", optional = true }
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.0', optional = true }

[features]

# If this is set, then the "Drop" feature of MemoryMessage structs
# will not be implemented.  This should only be set by the kernel.
forget-memory-messages = []

# Enable using `bitflags`
bit-flags = ["bitflags"]

# This is being built as part of libstd
rustc-dep-of-std = ['core', 'compiler_builtins/rustc-dep-of-std']

# Processes and threads will all be subthreads. This is useful for kernel
# testing.
processes-as-threads = []

default = ["bit-flags", "xous-macros"]

[target.'cfg(any(windows,unix))'.dependencies]
lazy_static = "1.4.0"
