[package]
name = "xous"
version = "0.9.51"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "System call interface for Xous"
repository = "https://github.com/betrusted-io/xous-core/"
homepage = "https://betrusted.io/"

[dependencies]
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.0', optional = true }

[features]
v2p = []
default = []

# If this is set, then the "Drop" feature of MemoryMessage structs
# will not be implemented.  This should only be set by the kernel.
forget-memory-messages = []

# This is being built as part of libstd
rustc-dep-of-std = ['core', 'compiler_builtins/rustc-dep-of-std']

# Processes and threads will all be subthreads. This is useful for kernel
# testing.
processes-as-threads = []

[target.'cfg(any(windows,unix))'.dependencies]
lazy_static = "1.4.0"
