[package]
authors = ["bunnie <bunnie@kosagi.com>", "Sean Cross <sean@xobs.io>"]
description = "Provide high-resolution, non-rollover system time"
edition = "2018"
name = "xous-api-ticktimer"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/betrusted-io/xous-core/"
homepage = "https://betrusted.io/xous-book/"

# Dependency versions enforced by Cargo.lock.
[dependencies]
log = "0.4.14"
log-server = {version = "0.1.3", package = "xous-api-log"}
xous = "0.9.9"
xous-ipc = "0.9.9"
rkyv = {version = "0.4.3", default-features = false, features = ["const_generics"]}
num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
susres = {version = "0.9.0", package = "xous-api-susres"}
xous-names = {version = "0.9.3", package = "xous-api-names"}
xous-semver = "0.1.2"

[features]
debug-print = []
no-timestamp = [] # turns off embedded timestamp for reproducible builds
default = []
