[package]
authors = ["bunnie <bunnie@kosagi.com>"]
description = "Xous microkernel OS inter-process name resolution server"
edition = "2018"
name = "xous-api-names"
version = "0.9.5"
license = "MIT OR Apache-2.0"
repository = "https://github.com/betrusted-io/xous-core/"
homepage = "https://betrusted.io/"

# Dependency versions enforced by Cargo.lock.
[dependencies]
num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
log = "0.4.14"
log-server = {package = "xous-api-log", version = "0.1.4"}
xous = "0.9.11"
xous-ipc = "0.9.11"
rkyv = {version = "0.4.3", default-features = false, features = ["const_generics"]}

[features]
debugprint = []
default = [] # "debugprint"
