[package]
authors = ["bunnie <bunnie@kosagi.com>"]
description = "Xous microkernel OS inter-process name resolution server"
edition = "2018"
name = "xous-api-names"
version = "0.9.27"
license = "MIT OR Apache-2.0"
repository = "https://github.com/betrusted-io/xous-core/"
homepage = "https://betrusted.io/"

# Dependency versions enforced by Cargo.lock.
[dependencies]
log-server = {package = "xous-api-log", version = "0.1.25"}
xous = "0.9.30"
xous-ipc = "0.9.30"
num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
log = "0.4.14"
rkyv = {version = "0.4.3", default-features = false, features = ["const_generics"]}

[features]
debugprint = []
default = [] # "debugprint"
