[package]
name = "xous-api-susres"
version = "0.9.59"
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"
description = "Manager of suspend/resume operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/betrusted-io/xous-core/"
homepage = "https://betrusted.io/xous-book/"

# Dependency versions enforced by Cargo.lock.
[dependencies]
xous = "0.9.63"
xous-ipc = "0.9.63"
log-server = { package = "xous-api-log", version = "0.1.59" }
xous-names = { package = "xous-api-names", version = "0.9.61" }
log = "0.4.14"
num-derive = { version = "0.3.3", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
rkyv = { version = "0.8.8", default-features = false, features = [
    "std",
    "alloc",
] }

utralib = { version = "0.1.24", optional = true, default-features = false }

[features]
precursor = ["utralib/precursor"]
hosted = ["utralib/hosted"]
renode = ["utralib/renode"]
sus_reboot = [
] # when selected, suspend triggers an immediate reboot instead of suspend. For testing only.
debugprint = []
default = []
