[package]
name = "xous-api-susres"
version = "0.9.68"
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"
description = "Manager of suspend/resume operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/betrusted-io/xous-core/"
homepage = "https://betrusted.io/xous-book/"

# Dependency versions enforced by Cargo.lock.
[dependencies]
xous = "0.9.70"
xous-ipc = "0.10.10"
log-server = { package = "xous-api-log", version = "0.1.69" }
xous-names = { package = "xous-api-names", version = "0.9.71" }
log = "0.4.14"
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
rkyv = { version = "0.8.8", default-features = false, features = [
    "std",
    "alloc",
] }

utralib = { version = "0.1.27", optional = true, default-features = false }

[features]
precursor = ["utralib/precursor"]
hosted = ["utralib/hosted"]
renode = ["utralib/renode"]
bao1x = ["utralib/bao1x"]
sus_reboot = [
] # when selected, suspend triggers an immediate reboot instead of suspend. For testing only.
debugprint = []
default = []
