[package]
name = "dabao-console"
version = "0.1.0"
edition = "2021"

[dependencies]
utralib = { version = "0.1.26", optional = true, default-features = false }
xous-names = { package = "xous-api-names", version = "0.9.69" }
ticktimer = { package = "xous-api-ticktimer", version = "0.9.67" }
xous = "0.9.68"
log-server = { package = "xous-api-log", version = "0.1.67" }
log = "0.4.14"
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
bao1x-hal = { path = "../../libs/bao1x-hal", features = [
    "std",
], optional = true }
bao1x-api = { path = "../../libs/bao1x-api" }
bao1x-hal-service = { path = "../../services/bao1x-hal-service", optional = true }
bao1x-emu = { path = "../../services/bao1x-emu", optional = true }
usb-bao1x = { path = "../../services/usb-bao1x" }
bytemuck = "1.24.0"

aes = { path = "../../services/aes", default-features = false, optional = true }

# hid bringup
xous-usb-hid = { git = "https://github.com/betrusted-io/xous-usb-hid.git", branch = "main", optional = true }

bio-lib = { path = "../../libs/bio-lib" }
arbitrary-int = "1.2"

# aes testing
[features]
bao1x = ["utralib/bao1x", "usb-bao1x/bao1x", "aes/bao1x"]
board-dabao = [
    "bao1x-hal-service/board-dabao",
    "bao1x-hal/board-dabao",
    # "bao1x-hal/debug-print-uart",
    "usb-bao1x/board-dabao",
]
ctap-bringup = []
usb = []
aestests = ["aes"]
default = ["usb"]
