[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
xous = "0.9.66"
xous-ipc = "0.10.6"
log-server = { package = "xous-api-log", version = "0.1.65" }
xous-names = { package = "xous-api-names", version = "0.9.67" }
utralib = { version = "0.1.25", optional = true, default-features = false }

[features]
bao1x = ["utralib/bao1x"]
board-dabao = []
default = []
