[package]
name = "app-loader"
version = "0.1.0"
authors = ["Vihaan Jim <vihaanjim@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xous = "0.9.68"
xous-ipc = "0.10.8"
log-server = { package = "xous-api-log", version = "0.1.67" }
log = "0.4.14"
xous-names = { package = "xous-api-names", version = "0.9.69" }
gam = { path = "../../services/gam" }
ux-api = { path = "../../libs/ux-api" }
modals = { path = "../../services/modals" }
ticktimer-server = { package = "xous-api-ticktimer", version = "0.9.67" }
locales = { path = "../../locales" }

num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.14", default-features = false }

rkyv = { version = "0.8.8", default-features = false, features = [
    "std",
    "alloc",
] }

ureq = { version = "2.9.4", features = ["json"] }
url = "2.3.1"
