[package]
name = "ball"
version = "0.1.0"
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"
description = "Ball demo app"

# Dependency versions enforced by Cargo.lock.
[dependencies]
log = "0.4.14"
num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
xous = "0.9.9"
xous-ipc = "0.9.9"
log-server = { version = "0.1.3", package = "xous-api-log" }
ticktimer-server = { version = "0.9.1", package = "xous-api-ticktimer" }
xous-names = { version = "0.9.3", package = "xous-api-names" }
gam = {path = "../../services/gam" }
trng = {path = "../../services/trng"}
modals = {path = "../../services/modals"}
com = {path = "../../services/com"} # for the gyro read
locales = {path = "../../locales"}

[features]
default = []
